// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept fill prop 1`] = `
.emotion-0 {
  fill: #D01E29;
  font-size: 1.5rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <defs>
      <path
        d="M8 0a2 2 0 012 2v.34c2.328.81 4 3.016 4 5.621V14h1c.667 0 1 .333 1 1s-.333 1-1 1H1c-.667 0-1-.333-1-1s.333-1 1-1h1V8.039a6.032 6.032 0 014-5.677V2a2 2 0 012-2zm0 4a4 4 0 00-4 4v6h8V8a4 4 0 00-4-4zM6 18a2 2 0 004 0H6z"
        id="bell-outline_svg__a"
      />
    </defs>
    <use
      transform="translate(4 2)"
      xlink:href="#bell-outline_svg__a"
    />
  </svg>
</div>
`;

exports[`should accept size prop 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 3rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <defs>
      <path
        d="M8 0a2 2 0 012 2v.34c2.328.81 4 3.016 4 5.621V14h1c.667 0 1 .333 1 1s-.333 1-1 1H1c-.667 0-1-.333-1-1s.333-1 1-1h1V8.039a6.032 6.032 0 014-5.677V2a2 2 0 012-2zm0 4a4 4 0 00-4 4v6h8V8a4 4 0 00-4-4zM6 18a2 2 0 004 0H6z"
        id="bell-outline_svg__a"
      />
    </defs>
    <use
      transform="translate(4 2)"
      xlink:href="#bell-outline_svg__a"
    />
  </svg>
</div>
`;

exports[`should accept stroke prop 1`] = `
.emotion-0 {
  fill: currentColor;
  stroke: #AD5000;
  font-size: 1.5rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <defs>
      <path
        d="M8 0a2 2 0 012 2v.34c2.328.81 4 3.016 4 5.621V14h1c.667 0 1 .333 1 1s-.333 1-1 1H1c-.667 0-1-.333-1-1s.333-1 1-1h1V8.039a6.032 6.032 0 014-5.677V2a2 2 0 012-2zm0 4a4 4 0 00-4 4v6h8V8a4 4 0 00-4-4zM6 18a2 2 0 004 0H6z"
        id="bell-outline_svg__a"
      />
    </defs>
    <use
      transform="translate(4 2)"
      xlink:href="#bell-outline_svg__a"
    />
  </svg>
</div>
`;

exports[`should accept style prop 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  stroke-width: 5;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <defs>
      <path
        d="M8 0a2 2 0 012 2v.34c2.328.81 4 3.016 4 5.621V14h1c.667 0 1 .333 1 1s-.333 1-1 1H1c-.667 0-1-.333-1-1s.333-1 1-1h1V8.039a6.032 6.032 0 014-5.677V2a2 2 0 012-2zm0 4a4 4 0 00-4 4v6h8V8a4 4 0 00-4-4zM6 18a2 2 0 004 0H6z"
        id="bell-outline_svg__a"
      />
    </defs>
    <use
      transform="translate(4 2)"
      xlink:href="#bell-outline_svg__a"
    />
  </svg>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <svg
    aria-hidden="true"
    class="emotion-0"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M17.162 11.044L7.088 21.117l-3.841.784a1.163 1.163 0 01-.89-.195c-.266-.186-.37-.516-.312-.993l.81-3.828L12.93 6.81l4.233 4.233zm-2.821.019L12.93 9.652l-7.952 7.951-.709 2.12 2.12-.709 7.952-7.951zm6.9-6.901c.94.941.94 1.883-.003 2.825l-2.83 2.83-4.232-4.233 2.829-2.83c.948-.94 1.89-.94 2.828 0l1.408 1.408zm-1.414 1.415l-1.411-1.411-1.415 1.414 1.411 1.411 1.415-1.414z"
    />
  </svg>
</div>
`;
